add blog page and some minor css changes

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a class="on" href="index.html">POČETNA</a></li>
                 <li><a href="about.html">O NAMA</a></li>
                 <li><a href="contact.html">KONTAKT</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li><a href="settings.html">PODEŠAVANJA</a></li>
             </ul>
         </nav>
@@ -59,6 +60,7 @@
                     <li><a class="on" href="index.html">POČETNA</a></li>
                     <li><a href="about.html">O NAMA</a></li>
                     <li><a href="contact.html">KONTAKT</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
                     <li><a href="settings.html">PODEŠAVANJA</a></li>
                 </ul>
             </div>
